# slingshot-rv-autoloader

./: .slingshot_rv_autoloader.cfg.EXAMPLE  README.md  pyproject.toml  pyrightconfig.json  slingshot_rv_autoloader.cfg.EXAMPLE
.github/workflows/: build-and-release.yml
scripts/: build.py
src/: PACKAGE  config.py  rv_auto_loader.py  rv_menu_schema.py  slingshot_autoloader.py  slingshot_autoloader_config.py
src/ocio/: studio-config-v2.1.0_aces-v1.3_ocio-v2.2.ocio
src/rv/: commands.py  extra_commands.py
src/rv_schemas/: event.py  menu.py  ocio.py
tests/: conftest.py  test_autoloader.py  test_config.py
typings/rv/: commands.pyi  extra_commands.pyi  rvtypes.pyi  rvui.pyi
typings/rv/schemas/: event.pyi  ocio.pyi
