[project]
name = "rv-auto-loader"
version = "1.5"
description = "Slingshot RV Plate/v000/LUT/CDL Auto Loader"
authors = [
    { name = "slingshotsys", email = "146885925+slingshotsys@users.noreply.github.com" },
]
requires-python = ">=3.10,<=3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = ["opencolorio>=2.4.1,<3"]

[dependency-groups]
dev = [
    "ruff>=0.9.5,<0.10",
    "pytest>=8.3.4,<9",
    "pyside2>=5.15.2.1,<6",
    "types-opencolorio>=2.2.1.2,<3",
    "rich>=13.9.4,<14",
    "poethepoet>=0.32.2,<0.33",
]

[tool.uv]
package = false


[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--import-mode=importlib"]

[tool.poe.tasks]
lint = "uvx ruff check --fix"
test = "uv run pytest tests"
format = "uvx ruff format"
build = "uv run python scripts/build.py"
release = ["lint", "format", "test", "build"]
